--- a/CómputoEvolutivo/FrameworksGenéticos.TEX/FrameworksGenéticos.tex
+++ b/CómputoEvolutivo/FrameworksGenéticos.TEX/FrameworksGenéticos.tex
@@ -7,6 +7,9 @@
 \usepackage{dirtytalk}
 \setdefaultlanguage[variant=mexican]{spanish}
 \usepackage{multirow}
+\bibliography{bibliografia}
+\nocite{*}
+
 \author{%
 Brandon Marquez Salazar
 }
@@ -37,6 +40,9 @@ Brandon Marquez Salazar
 
   \textit{Genetic Algorithm Framework in Python}, es un framework que
   permite la implementación de algoritmos genéticos de forma flexible,
-  procurando ajustarse a las necesidades del usuario.
+  procurando ajustarse a las necesidades del usuario, permitiendo al
+  usuario definir a los individuos de manera personalizable. Estas
+  características prometen que el framework ofrezca soluciones específicas
+  a problemas puntuales.
 
 \end{document}
