--- a/CómputoEvolutivo/FrameworksGenéticos.TEX/bibliografia.bib
+++ b/CómputoEvolutivo/FrameworksGenéticos.TEX/bibliografia.bib
@@ -4,3 +4,13 @@
   journal = "Congreso Internacional de Mecatrónica, Control e Inteligencia Artificial, UNAM",
   year    = 2023,
 }
+
+@article{ffmmdeap,
+  author = { Félix-Antoine Fortin, François-Michel De Rainville, Marc-André Gardner, Marc Parizeau, Christian Gagné },
+  abstract = {DEAP is a novel evolutionary computation framework for rapid prototyping and testing of ideas. Its design departs from most other existing frameworks in that it seeks to make algorithms explicit and data structures transparent, as opposed to the more common black-box frameworks. Freely available with extensive documentation at http://deap.gel.ulaval.ca, DEAP is an open source project under an LGPL license.},
+  institution = {Universit\´e Laval},
+  journal = {Journal of Machine Learning Research},
+  edition = {13},
+  number = {2171-2175}
+  year = {2012}
+}
