--- a/CómputoEvolutivo/FrameworksGenéticos.TEX/bibliografia.bib
+++ b/CómputoEvolutivo/FrameworksGenéticos.TEX/bibliografia.bib
@@ -1,16 +1,38 @@
 @article{nash51,
-  author  = "Ramírez Guillermo, Trujillo-Romero Felipe, García Carlos Hugo",
-  title   = "Comparativa de frameworks para cómputo evolutivo implementados en Python",
-  journal = "Congreso Internacional de Mecatrónica, Control e Inteligencia Artificial, UNAM",
-  year    = 2023,
+  author       = {Ramírez Guillermo, Trujillo-Romero Felipe, García Carlos Hugo},
+  title        = {Comparativa de frameworks para cómputo evolutivo implementados en Python},
+  journaltitle = {Congreso Internacional de Mecatrónica, Control e Inteligencia Artificial, UNAM},
+  year         = {2023},
 }
 
 @article{ffmmdeap,
-  author = { Félix-Antoine Fortin, François-Michel De Rainville, Marc-André Gardner, Marc Parizeau, Christian Gagné },
-  abstract = {DEAP is a novel evolutionary computation framework for rapid prototyping and testing of ideas. Its design departs from most other existing frameworks in that it seeks to make algorithms explicit and data structures transparent, as opposed to the more common black-box frameworks. Freely available with extensive documentation at http://deap.gel.ulaval.ca, DEAP is an open source project under an LGPL license.},
-  institution = {Universit\´e Laval},
-  journal = {Journal of Machine Learning Research},
-  edition = {13},
-  number = {2171-2175}
-  year = {2012}
+  author       = {Félix-Antoine Fortin; François-Michel De Rainville; Marc-André Gardner; Marc Parizeau; Christian Gagné},
+  abstract     = {DEAP is a novel evolutionary computation framework for rapid prototyping and testing of ideas. Its design departs from most other existing frameworks in that it seeks to make algorithms explicit and data structures transparent, as opposed to the more common black-box frameworks. Freely available with extensive documentation at http://deap.gel.ulaval.ca, DEAP is an open source project under an LGPL license.},
+  institution  = {Universit\´e Laval},
+  journaltitle = {Journal of Machine Learning Research},
+  edition      = {13},
+  number       = {2171-2175},
+  year         = {2012},
+}
+
+@online{deapdocs,
+    author = {},
+    title = {One Max Problem — DEAP 1.4.3 documentation},
+    year = ,
+    url = {https://deap.readthedocs.io/en/master/examples/ga_onemax.html},
+    urldate = {2025-05-29},
+}
+
+@manual{gaftdoc,
+  title        = {GAFT Documentation, Release GAFT},
+  date         = {Dec. 23 2018},
+  author       = {Zhengjiang Shao},
+  urldate      = {2025-05-29},
+  url          = {https://gaft.readthedocs.io/_/downloads/en/latest/pdf/}
+}
+
+@online{,
+    author = {PytLab},
+    title = {gaft github repository example},
+    url = {}https://github.com/PytLab/gaft/blob/master/examples/ex01/ex01.py,
 }
