Presentación Recon Patrones

--- a/CómputoEvolutivo/FrameworksGenéticos.TEX/FrameworksGenéticos.tex
+++ b/CómputoEvolutivo/FrameworksGenéticos.TEX/FrameworksGenéticos.tex
@@ -4,7 +4,8 @@
 \usepackage{fontspec}
 \setmainfont{QTBookmann}
 \setsansfont{QTFrizQuad}
-\setmonofont{VictorMono Nerd Font Mono}
+%\setmonofont{VictorMono Nerd Font Mono}
+\setmonofont{VictorMono NF}
 \usepackage{polyglossia}
 \usepackage{xcolor}
 \usepackage{dirtytalk}
@@ -34,6 +35,7 @@
         \draw[ball color=PineGreen!7!Plum!20!Black,shading=ball,line width=0.03em] (0,0) circle(0.18em);}}
 \setbeamertemplate{itemize item}{\colouredcircle}
 %\renewcommand{\labelitemi}{\colouredcircle}
+\setbeamercolor*{bibliography entry title}{color=Cyan}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \usepackage{tikzpagenodes}
 \setbeamertemplate{background canvas}{%
