--- a/ReconocimientoDePatrones/Tarea01.TEX/MetodologíaDeReconocimiento.tex
+++ b/ReconocimientoDePatrones/Tarea01.TEX/MetodologíaDeReconocimiento.tex
@@ -31,7 +31,13 @@ Brandon Marquez Salazar
 %Duración no más de 15min
 \begin{document}
   \frame{\titlepage}
-  \frame{Objetivo}
-  \frame{Herramientas utilizadas}
-  \frame{Algoritmo; Lugar (institución) y año de realización (En caso de basarse en un artículo)}
+  \begin{frame}
+    {Objetivo}
+  \end{frame}
+  \begin{frame}
+    {Herramientas utilizadas}
+  \end{frame}
+  \begin{frame}
+    {Algoritmo; Lugar (institución) y año de realización (En caso de basarse en un artículo)}
+  \end{frame}
 \end{document}
