--- a/RedesNeuronales/Tarea01.TEX/notebook/perceptron.qmd
+++ b/RedesNeuronales/Tarea01.TEX/notebook/perceptron.qmd
@@ -43,7 +43,15 @@ I'll use numpy as a very common package used for scientific computation,
 matplotlib for data visualization.
 
 ```{python}
-#!pip install scikit-learn
+!pip install matplotlib
+```
+```{python}
+!pip install pandas
+```
+```{python}
+!pip install scikit-learn
+```
+```{python}
 import numpy as np
 from sklearn.datasets import make_blobs
 import matplotlib.pyplot as plt
@@ -134,7 +142,7 @@ X,Y = make_blobs(
   random_state=1201931
 )
 plt.scatter(X[:,0],X[:,1],c=Y,cmap='magma',s=5)
-plt.xlabel('Feature 1')
+plt.ylabel('Feature 1')
 plt.xlabel('Feature 2')
 plt.title('Sample space')
 plt.colorbar(label="Classes")
@@ -166,7 +174,7 @@ Pf=np.multiply(Po,m)+np.divide(bias,W[1])
 
 plt.plot(Po,Pf,'g-',linewidth=0.8)
 plt.scatter(X[:,0],X[:,1],c=Y,cmap='magma',s=5)
-plt.xlabel('Feature 1')
+plt.ylabel('Feature 1')
 plt.xlabel('Feature 2')
 plt.title('Sample space')
 plt.colorbar(label="Classes")
