--- a/CómputoEvolutivo/ProgramaciónGenética.TEX/bibliografia.bib
+++ b/CómputoEvolutivo/ProgramaciónGenética.TEX/bibliografia.bib
@@ -18,21 +18,48 @@
 @online{deapdocs,
     author = {},
     title = {One Max Problem — DEAP 1.4.3 documentation},
-    year = ,
+    year = {},
     url = {https://deap.readthedocs.io/en/master/examples/ga_onemax.html},
     urldate = {2025-05-29},
 }
 
 @manual{gaftdoc,
   title        = {GAFT Documentation, Release GAFT},
-  date         = {Dec. 23 2018},
+  year         = {2018},
   author       = {Zhengjiang Shao},
   urldate      = {2025-05-29},
   url          = {https://gaft.readthedocs.io/_/downloads/en/latest/pdf/}
 }
 
-@online{,
+@online{pylab,
     author = {PytLab},
     title = {gaft github repository example},
-    url = {}https://github.com/PytLab/gaft/blob/master/examples/ex01/ex01.py,
+    url = {https://github.com/PytLab/gaft/blob/master/examples/ex01/ex01.py},
+}
+
+@book{PEADNAS2003,
+  authors       = {Elizabeth Bradley, Ronda K. Butler-Villa, Robert A. Eisenstein, Marcus W. Feldman, Murray Gell-Mann, George J. Gumerman, David Lane, Simon Levin, John Miller, David Pines, Andreas Wagner},
+  title        = {Perspectives on Adaptation in Natural and Artificial Systems},
+  editor       = {Santa Fe Institute Editorial Board},
+  year         = {2003},
+  institution  = {Oxford University Press},
+}
+
+@book{Eiben2015,
+  title = {Introduction to Evolutionary Computing},
+  ISBN = {9783662448748},
+  ISSN = {1619-7127},
+  url = {http://dx.doi.org/10.1007/978-3-662-44874-8},
+  DOI = {10.1007/978-3-662-44874-8},
+  journal = {Natural Computing Series},
+  publisher = {Springer Berlin Heidelberg},
+  author = {Eiben,  A.E. and Smith,  J.E.},
+  year = {2015}
+}
+
+@online{DEAPGENETIC,
+  author = {DEAP},
+  title = {DEAP Genetic Programming},
+  url = {https://deap.readthedocs.io/en/master/tutorials/advanced/gp.html},
+  urldate = {2025-05-29},
 }
